[gd_scene load_steps=7 format=3 uid="uid://cbft2up0ctegq"]

[ext_resource type="Script" path="res://Scenes/final_scene.gd" id="1_68n7n"]
[ext_resource type="AudioStream" uid="uid://bcqafrwf6yswy" path="res://Assets/Sounds/success_horns.wav" id="2_vnp8m"]
[ext_resource type="LabelSettings" uid="uid://4pc6j3nv1sp0" path="res://Global/final_scene_large_stat.tres" id="3_gjf0r"]
[ext_resource type="LabelSettings" uid="uid://c774imy064hb0" path="res://Global/normal_large_font.tres" id="3_mv8oq"]
[ext_resource type="LabelSettings" uid="uid://lljnykpn804l" path="res://Global/final_scene_smaller_stat_font.tres" id="4_irac3"]

[sub_resource type="FontFile" id="FontFile_x42u2"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)

[node name="FinalScene" type="ColorRect"]
script = ExtResource("1_68n7n")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_vnp8m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 363.0
offset_top = 458.0
offset_right = 812.0
offset_bottom = 588.0
theme_override_fonts/font = SubResource("FontFile_x42u2")
text = "Go Back to Main Menu"

[node name="TotalNumberOfKeysLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 113.0
offset_right = 1151.0
offset_bottom = 220.0
text = "Total # of Keys: 5/5"
label_settings = ExtResource("3_mv8oq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalTimeLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 84.0
offset_right = 1150.0
offset_bottom = 141.0
text = "Total Time: 00:50:23"
label_settings = ExtResource("3_gjf0r")
horizontal_alignment = 1

[node name="TotalNumberOfDeathsLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.026
anchor_bottom = 0.057
offset_left = 4.0
offset_top = 182.0
offset_right = 1122.05
offset_bottom = 236.064
text = "Total # of Deaths: 45"
label_settings = ExtResource("3_gjf0r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalNumberOfSandDeathsLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 350.0
offset_right = 1153.0
offset_bottom = 436.0
text = "Total # of Sand Deaths: 15"
label_settings = ExtResource("4_irac3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalNumberOfLavaDeathsLabel2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = -2.0
offset_top = 310.0
offset_right = 1148.0
offset_bottom = 382.0
text = "Total # of Lava Deaths: 14"
label_settings = ExtResource("4_irac3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalNumberOfArrowDeathsLabel3" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 272.0
offset_right = 1150.0
offset_bottom = 344.0
text = "Total # of Arrow Deaths: 20"
label_settings = ExtResource("4_irac3")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
